# 2026-dbx-hackathon

./: .gitignore  CLAUDE.md  Hackathon Instructions.md  Hackathon Topic Prioritization Rubric.md  Virtue Foundation Dataset (DAIS 2026)  Virtue Foundation Dataset (DAIS 2026).md  app.py  app.yaml  databricks.yml  dbx-hackathon-playbook.md  hackathon.md  idea_phantom_census.md  idea_phantom_census_changes.md  phantom_census_schema_audit.md  phantom_census_validation.md  phantom_census_validation_results.md  pyproject.toml
.claude/commands/: arrow-maintenance.md  lid-coach.md  linked-intent-dev.md  map-codebase.md  update-lid.md
.claude/skills/: databricks-app-design  databricks-apps  databricks-core  databricks-dabs  databricks-jobs  databricks-lakebase  databricks-model-serving  databricks-pipelines  databricks-serverless-migration  databricks-vector-search
.claude/skills/arrow-maintenance/: SKILL.md
.claude/skills/lid-coach/: SKILL.md
.claude/skills/linked-intent-dev/: SKILL.md
.claude/skills/map-codebase/: SKILL.md
.claude/skills/update-lid/: SKILL.md
.databricks/aitools/skills/: .state.json
.github/workflows/: databricks-deploy.yml  deploy-react-app.yml  deploy.yml  run-data-pipeline.yml
data/: README.md
docs/: SPEC_MIGRATION_NOTES.md  data-quality-notes.md  dev-setup.md  high-level-design.md  setup-synced-tables.sh  user-guide.md
docs/intent/desert-scoring/: desert-scoring-design.md  desert-scoring-specs.md
docs/intent/existence-engine/: existence-engine-design.md  existence-engine-specs.md
docs/intent/lakebase-persistence/: lakebase-persistence-design.md  lakebase-persistence-specs.md
docs/intent/planner-workspae/: planner-workspace-design.md  planner-workspace-specs.md
docs/proposals/: 2026-06-16-entity-resolution-trust-grade-test7.md
notebooks/: existence_engine.py  lakebase_load.py
phantom-census-app/: .env.example  README.md  appkit.plugins.json  databricks.yml  package-lock.json  package.json
phantom-census-app/client/: index.html
phantom-census-app/client/public/: site.webmanifest
phantom-census-app/scripts/: write-version.js
phantom-census-app/server/: server.ts
phantom-census-app/tests/: smoke.spec.ts
tests/: conftest.py  test_adjudicator.py  test_cli.py  test_data_loading.py  test_defender.py  test_minhash.py  test_minhash_persistence.py  test_nfhs.py  test_pin_lookup.py  test_pipeline.py  test_spatial.py  test_temporal.py
tests/desert/: conftest.py  test_burden_impute.py  test_formula.py  test_max_density_per_km2.py  test_recompute.py  test_tile_render.py
tests/existence_engine/: test_adjudicator.py  test_ai_evidence_layer.py  test_embedding_drift.py  test_layer_a.py  test_layer_b.py  test_layer_c.py  test_pipeline.py  test_spatial.py
tests/lakebase/: conftest.py  test_ai_cache_writes.py  test_app_readers.py  test_engine_writer.py  test_facility_capabilities.py  test_overrides.py  test_recompute_multicap.py  test_rescue_writes.py  test_scenarios.py  test_schema.py  test_writer_unit.py
tests/planner/: test_activation_gate.py  test_ai_advisory_render.py  test_audit_queue.py  test_budget_recommendation.py  test_callbacks.py  test_css.py  test_exports.py  test_fma_adapter.py  test_genie_scope.py  test_geometry_loader.py  test_rank_movers.py  test_session_state.py  test_smoke.py
(+85 files in other folders)
