[project]
name = "phantom-census"
version = "0.1.0"
description = "Phantom Census — existence engine for medical-facility verdicts"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "datasketch>=1.6",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom_census"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_classes = "TestCase_"  # avoid collecting TestResult/TestName enums
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
