[project]
name = "phantom-census"
version = "0.1.0"
description = "Phantom Census — medical-facility phantom detection and desert scoring"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "datasketch>=1.6",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyarrow>=15.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "folium>=0.16",
    "branca>=0.7",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.36",
    "streamlit-folium>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
    "streamlit>=1.36",
    "streamlit-folium>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom_census"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_classes = "TestCase_"  # avoid collecting TestResult/TestName enums
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
markers = [
    "integration: end-to-end tests against real data (skipped by default)",
    "requires_docker: needs the Docker daemon (testcontainers)",
]
